<resources>
    <string name="server_url">http://r1technologies.in.net/wedplan/index.php?option=com_wedplan&amp;view=api</string>
    <string name="image_url">http://r1technologies.in.net/wedplan</string>
    <string name="api_key">JeQKyQPYym5OBmHs</string>
    <string name="logo_slogan">A Division of RightOne Technologies</string>


    <string name="app_name">Wedding Planner</string>
    <string name="city_name">Select City</string>
    <string name="submit">Submit</string>

    <string name="errorBlankCity">Please select a city</string>
    <string name="errorBlankName">Please enter name</string>
    <string name="errorBlankMobile">Please enter mobile</string>
    <string name="title_activity_main">Basic Overview</string>
    <string name="title_overview">Overview</string>
    <string name="title_photos">Photos</string>
    <string name="title_contact">Contact</string>
    <string name="title_review">Reviews</string>
    <string name="contact_details">Contact Details</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="speciality">Speciality</string>
    <string name="map">Map</string>
    <string name="drive">Drive</string>

    <string name="name">Full Name</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="message">Message</string>
    <string name="send">Send</string>

    <string name="email_subject">I need more Info.</string>
    <string name="check_internet">Please check your internet connection</string>
    <string name="check_name">Please enter your name</string>
    <string name="check_email">Please enter your email</string>
    <string name="check_mobile">Please enter your mobile</string>
    <string name="check_message">Please enter your message</string>
    <string name="message_saved">Your message sent successfully</string>
    <string name="message_error">Unable to send message</string>

    <string name="business_quote">&quot;Business is all about the customer: what the customer wants and what they get.&quot;</string>
    <string name="service_quote">We hope you are happy with our services</string>

    <string name="title">Title</string>
    <string name="send_review">Send Review</string>

    <string name="rating5">Awesome. I love it</string>
    <string name="rating4">Great</string>
    <string name="rating3">Good</string>
    <string name="rating2">Need some improvement</string>
    <string name="rating1">Very bad</string>
    <string name="check_title">Please enter review title</string>
    <string name="check_review">Please enter review</string>
    <string name="check_rating">Please select rating star</string>
    <string name="review_thanks">Thank you for sharing your review</string>
    <string name="review_error">Unable to send review</string>

    <string name="favourites">My Favourites</string>
    <string name="change_city">Change City</string>
    <string name="new_listing">Add New Listing</string>
    <string name="privacy">Privacy Policy</string>
    <string name="terms">Terms And Conditions</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="refund">Refund</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="title_home">Home</string>
    <string name="title_map">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_views">Views</string>

    <string name="service_name">Service</string>

    <string name="search_title">Search</string>

    <string name="owner_name">Owner Name</string>
    <string name="business_name">Business Name</string>
    <string name="address">Address</string>
    <string name="state_name">State</string>

    <string name="location_name">Location</string>
    <string name="mobile_number">Mobile</string>
    <string name="zip_code">Zip Code</string>
    <string name="other_number">Other Number</string>
    <string name="subscription">Membership</string>
    <string name="category_name">Category</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="description">Description</string>
    <string name="website">Website</string>
    <string name="save_provider">Save Provider</string>
    <string name="update_provider">Update Provider</string>
    <string name="view_map">View Map</string>
    <string name="update">Update Now</string>
    <string name="save">Save Now</string>
    <string name="reset">Reset</string>

    <string name="chk_user">User Session Expired. Please login again</string>
    <string name="chk_owner_name">Please enter Owner Name</string>
    <string name="chk_business_name">Please enter Business Name</string>
    <string name="chk_address">Please enter Address</string>
    <string name="chk_state_name">Please select State</string>
    <string name="chk_city_name">Please select City</string>
    <string name="chk_location_name">Please select Location</string>
    <string name="chk_mobile_number">Please enter Mobile</string>
    <string name="chk_zip_code">Please enter Zip Code</string>

    <string name="chk_subscription">Please select Membership</string>
    <string name="chk_category_name">Please select Category</string>
    <string name="chk_service_name">Please select Service</string>
    <string name="chk_speciality">Please enter Speciality</string>
    <string name="chk_latitude">Please select Latitude</string>
    <string name="chk_longitude">Please select Longitude</string>
    <string name="chk_business_pic">Please select Business Pic</string>
    <string name="chk_profile_pic">Please select Profile Pic</string>

    <string name="listing_success">Listing saved successfully. An OTP has sent on the User\'s mobile</string>
    <string name="user_success">An OTP has sent on the User\'s mobile</string>
    <string name="user_active">User is active now</string>
    <string name="prompt_mobile">Mobile</string>


    <string name="otp_title">One Time Password</string>
    <string name="otp_resend">Resend</string>
    <string name="prompt_otp">One Time Password(OTP)</string>
    <string name="action_verify">Verify Now</string>
    <string name="otp_not_match">Invalid OTP</string>
    <string name="error_field_required">This field is required</string>

    <string name="user_name">Name</string>
    <string name="title_activity_new_maps">Map</string>

</resources>
